--- a/primeiros-cogios-angular/src/app/app.html
+++ b/primeiros-cogios-angular/src/app/app.html
@@ -1,8 +1,13 @@
 <div>
-  <h1>Meu teste</h1>
+  <h1>{{title}}</h1>
+  <h3>Aluno:{{aluno}}</h3>
+  <p>
+    A soma de 5 + 2 é igual a {{5+2}};
+  </p>
   <p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate quidem quasi optio id, 
     incidunt ea repudiandae aliquid enim reprehenderit voluptas explicabo. 
     Est nihil, autem aliquam veniam aperiam atque odit corrupti.
   </p>
+  <app-student></app-student>
 </div>
