--- a/primeiros-cogios-angular/src/app/components/student/student.html
+++ b/primeiros-cogios-angular/src/app/components/student/student.html
@@ -1,7 +1,7 @@
 <div>
     <h2>Sistema ALunos Proway</h2>
-    <p>Dados do aluno</p>
-    <p>Código:{{codigo}}</p>
-    <p>Nome:{{Nome}}</p>
-    <p>Angular:{{Curso}}</p>
+    <p><strong>Dados do aluno</strong></p>
+    <p><strong>Código:</strong>{{codigo}}</p>
+    <p><strong>Nome:</strong>{{Nome}}</p>
+    <p><strong>Curso:</strong>{{Curso}}</p>
 </div>
