--- a/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
+++ b/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
@@ -1,1 +1,15 @@
-<p>aluno works!</p>
+<div>
+    <p>
+        <strong>Dados do aluno</strong>
+    </p>
+    <p>
+        <strong>Código:</strong>
+    </p>
+    <p>
+        <strong>Nome:</strong>
+    </p>
+    <p>
+        <strong>Curso:</strong>
+    </p>
+</div>
+
