Adicionando div com dados aluno

--- a/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
+++ b/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
@@ -1,15 +1,17 @@
-<div>
+<div class="div">
+
+    <img src="../../../assets/images/usuario.png" alt="imagem usuario">
+
+    <h2>{{aluno.nome}}</h2>
+   
     <p>
-        <strong>Dados do aluno</strong>
+        <strong>Curso:</strong> SuperDev Java Full stack
     </p>
     <p>
-        <strong>Código:</strong>
+        <strong>Matrícula:</strong>{{aluno.matricula}}
     </p>
     <p>
-        <strong>Nome:</strong>
-    </p>
-    <p>
-        <strong>Curso:</strong>
+        <strong>E-mail:</strong> {{aluno.email}}
     </p>
 </div>
 
