--- a/primeiro_projeito_angular/src/app/app.html
+++ b/primeiro_projeito_angular/src/app/app.html
@@ -1,3 +1,10 @@
-<h1>Sistema Alunos Proway</h1>
+<header class="header">
+      <h1>Sistema Alunos Proway</h1>
+</header>
+<main>
+  <app-aluno></app-aluno>
+</main>
 
-<app-aluno></app-aluno>
+<footer class="footer">
+    <p>Desenvolvido por <a href="https://github.com/fmartins2106">Fernando Martins</a></p>
+</footer>
