--- a/primeiro_projeito_angular/src/app/app.html
+++ b/primeiro_projeito_angular/src/app/app.html
@@ -2,7 +2,8 @@
       <h1>Sistema Alunos Proway</h1>
 </header>
 <main>
-  <app-aluno></app-aluno>
+  <app-aluno [aluno]="listaALuno[0]"></app-aluno>
+  <app-aluno [aluno]="listaALuno[1]"></app-aluno>
 </main>
 
 <footer class="footer">
