--- a/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
+++ b/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
@@ -3,15 +3,16 @@
     <img src="../../../assets/images/usuario.png" alt="imagem usuario">
 
     <h2>{{aluno.nome}}</h2>
-   
-    <p>
-        <strong>Curso:</strong> SuperDev Java Full stack
-    </p>
     <p>
         <strong>Matrícula:</strong>{{aluno.matricula}}
+    </p>
+    <p>
+        <strong>Curso:</strong> {{aluno.cursos}}
     </p>
     <p>
         <strong>E-mail:</strong> {{aluno.email}}
     </p>
 </div>
+
+
 
