--- a/primeiro_projeito_angular/src/app/app.html
+++ b/primeiro_projeito_angular/src/app/app.html
@@ -2,8 +2,10 @@
       <h1>Sistema Alunos Proway</h1>
 </header>
 <main>
-  <app-aluno [aluno]="listaALuno[0]"></app-aluno>
+<!--   <app-aluno [aluno]="listaALuno[0]"></app-aluno>
   <app-aluno [aluno]="listaALuno[1]"></app-aluno>
+  <app-aluno [aluno]="listaALuno[2]"></app-aluno> -->
+  <app-aluno *ngFor="let aluno of listaALuno" [aluno]="aluno"></app-aluno>
 </main>
 
 <footer class="footer">
