--- a/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
+++ b/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
@@ -1,6 +1,6 @@
 <div class="div">
 
-    <img src="../../../assets/images/usuario.png" alt="imagem usuario">
+    <img src={{aluno.imagemUrl}} alt="imagem usuario">
 
     <h2>{{aluno.nome}}</h2>
     <p>
