--- a/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
+++ b/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
@@ -12,6 +12,9 @@
     <p>
         <strong>E-mail:</strong> {{aluno.email}}
     </p>
+    <div class="aprovacao" [ngClass]="aluno.cadastro == true ? 'aprovado' : 'reprovado'">
+        <p >Aluno {{aluno.cadastro == true? 'Aprovado' : 'Reprovado'}}</p>
+    </div>
 </div>
 
 
