Adicionando atualizações na lista

--- a/primeiro_projeito_angular/src/app/app.css
+++ b/primeiro_projeito_angular/src/app/app.css
@@ -19,7 +19,7 @@ footer > p > a {
     color: white;
     text-decoration: none;
 }
-.cards {
+.cards, .lista {
     display: flex;
     justify-content: center;
 }
