--- a/primeiro_projeito_angular/src/app/componentes/aluno-lista/aluno-lista.html
+++ b/primeiro_projeito_angular/src/app/componentes/aluno-lista/aluno-lista.html
@@ -1,20 +1,47 @@
-<table>
+<table class="lista">
     <tr>
-        <thead>
-            <th>Mátricula</th>
+        <th>Mátricula</th>
         <th>Nome</th>
-        <th>Curso</th>
+        <th>Cadastro</th>
         <th>E-mail</th>
-        <th>Status</th>
-        </thead>
+        <th>Curso</th>
     </tr>
-    <tbody>
-    <td>{{alunos[0].matricula}}</td>
-    <td>{{alunos[0].nome}}</td>
-    <td>{{alunos[0].cursos}}</td>
-    <td>{{alunos[0].email}}</td>
-    <td>{{alunos[0].cadastro}}</td>
-    </tbody>
+    <tr>
+      <td>{{alunos[0].matricula}}</td>
+      <td>{{alunos[0].nome}}</td>
+      <td>{{alunos[0].cursos}}</td>
+      <td>{{alunos[0].email}}</td>
+      <td>{{alunos[0].cadastro}}</td>
+    </tr>
+    <tr>
+      <td>{{alunos[0].matricula}}</td>
+      <td>{{alunos[0].nome}}</td>
+      <td>{{alunos[0].cursos}}</td>
+      <td>{{alunos[0].email}}</td>
+      <td>{{alunos[0].cadastro}}</td>
+    </tr>
+    <tr>
+      <td>{{alunos[0].matricula}}</td>
+      <td>{{alunos[0].nome}}</td>
+      <td>{{alunos[0].cursos}}</td>
+      <td>{{alunos[0].email}}</td>
+      <td>{{alunos[0].cadastro}}</td>
+    </tr>
+    <tr>
+      <td>{{alunos[0].matricula}}</td>
+      <td>{{alunos[0].nome}}</td>
+      <td>{{alunos[0].cursos}}</td>
+      <td>{{alunos[0].email}}</td>
+      <td>{{alunos[0].cadastro}}</td>
+    </tr>
+    <tr>
+      <td>{{alunos[0].matricula}}</td>
+      <td>{{alunos[0].nome}}</td>
+      <td>{{alunos[0].cursos}}</td>
+      <td>{{alunos[0].email}}</td>
+      <td>{{alunos[0].cadastro}}</td>
+    </tr>
+</table>
    
 <!-- </table>
 <table border="1" cellpadding="8" cellspacing="0">
