--- a/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
+++ b/primeiro_projeito_angular/src/app/componentes/aluno/aluno.html
@@ -1,3 +1,5 @@
+
+
 <div class="div">
 
     <img src={{aluno.imagemUrl}} alt="imagem usuario">
@@ -12,10 +14,15 @@
     <p>
         <strong>E-mail:</strong> {{aluno.email}}
     </p>
+    <p>
+        <strong>Média:</strong> Calcular a média
+    </p>
     <div class="aprovacao" [ngClass]="aluno.cadastro == true ? 'aprovado' : 'reprovado'">
         <p >Aluno {{aluno.cadastro == true? 'Aprovado' : 'Reprovado'}}</p>
     </div>
+
 </div>
+
 
 
 
