--- a/primeiro_projeito_angular/src/app/app.html
+++ b/primeiro_projeito_angular/src/app/app.html
@@ -5,12 +5,15 @@
 <main>
 
   <div class="button">
-    <button (click)="alterarExibicao()">Mostrar {{exibicao == "cards" ? 'lista' : 'cards'}}</button>
-    <button (click)="mostrarAprovados()">Mostrar alunos aprovados</button>
+    <button (click)="alterarExibicao()">Mostrar {{exibicao == "cards" ? 'lista' : 'cards'}}
+    </button>
+    <button (click)="filtrarAluno('aprovados')">Mostrar alunos aprovados</button>
+    <button (click)="filtrarAluno('reprovados')">Mostrar alunos reprovados</button>
+    <button (click)="filtrarAluno('todos')">Mostrar alunos todos</button>
   </div>
 
   <section class="cards" *ngIf="exibicao == 'aprovados'">
-      <app-aluno *ngFor="let aluno of aprovados" [aluno]="aluno"></app-aluno>
+      <app-aluno *ngFor="let aluno of listaFiltro" [aluno]="aluno"></app-aluno>
   </section>
 
 <section class="lista" *ngIf="exibicao  == 'lista'">
