--- a/projeto_curso_angular/src/app/componente03/componente03.html
+++ b/projeto_curso_angular/src/app/componente03/componente03.html
@@ -1,4 +1,5 @@
-<p>testando</p>
 
-<button (click)="alterarImagem()">Alterar imagem</button>
+
+<button (click)="alterarImage()"> clique aqui</button>
+<br><br>
 <img [src]="imagem" alt="">
