--- a/projeto_curso_angular/src/app/componente15-formulario/componente15-formulario.html
+++ b/projeto_curso_angular/src/app/componente15-formulario/componente15-formulario.html
@@ -1,1 +1,2 @@
-<p>componente15-formulario works!</p>
+<input type="text" [(ngModel)]="nome">
+<button (click)="cadastrarNome()">Cadastrar nome</button>
