--- a/projeto_curso_angular/src/app/componente13/componente13.html
+++ b/projeto_curso_angular/src/app/componente13/componente13.html
@@ -1,1 +1,33 @@
-<p>componente13 works!</p>
+
+<!-- FORMULÁRIO -->
+<form [formGroup]="formulario">
+    <input type="text" class="form-control" formControlName="id"  readonly >
+    <input type="text"   class="form-control" formControlName="nome" placeholder="Nome">
+    <input type="number" class="form-control" formControlName="valor" placeholder="Valor">
+
+    <input type="button" class="btn btn-primary" value="Cadastrar" *ngIf="btnCadastrar" (click)="cadastrar()">
+    <input type="button" class="btn btn-primary" value="Alterar" *ngIf="!btnCadastrar" (click)="alterar()">
+    <input type="button" class="btn btn-primary" value="Remover" *ngIf="!btnCadastrar" (click)="remover()">
+</form>
+
+<!-- TABELA -->
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Nome</th>
+            <th>Valor</th>
+            <th>Selecionar</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr *ngFor="let valor of vetor; let indice = index">
+            <td>{{indice+1}}</td>
+            <td>{{valor.nome}}</td>
+            <td>{{valor.valor}}</td>
+            <td><button class="btn btn-primary" (click)="selecionarProduto(indice)">Selecionar</button></td>
+        </tr>
+    </tbody>
+</table>
+
