--- a/projeto_curso_angular/src/app/componente15/componente15.html
+++ b/projeto_curso_angular/src/app/componente15/componente15.html
@@ -1,4 +1,4 @@
 
 
-<app-componente15-formulario></app-componente15-formulario>
-<app-componente15-tabela></app-componente15-tabela>
+<app-componente15-formulario (funcao)="cadastrar($event)"></app-componente15-formulario>
+<app-componente15-tabela [vetor]="nomes"></app-componente15-tabela>
